--- a/kimera_vio_ros/package.xml
+++ b/kimera_vio_ros/package.xml
@@ -15,6 +15,7 @@
   <depend>cv_bridge</depend>
   <depend>kimera_common</depend>
   <depend>kimera_vio</depend>
+  <depend>libboost-dev</depend>
   <depend>libgflags-dev</depend>
   <depend>libgoogle-glog-dev</depend>
   <depend>libopencv-dev</depend>
