--- a/kimera_vio_ros/CMakeLists.txt
+++ b/kimera_vio_ros/CMakeLists.txt
@@ -39,6 +39,7 @@ set(dependencies
 set(library_name ${PROJECT_NAME})
 add_library(${library_name} SHARED
   src/interfaces/base_interface.cpp
+  src/interfaces/imu_interface.cpp
 )
 ament_target_dependencies(${library_name}
   ${dependencies})
@@ -66,8 +67,8 @@ install(DIRECTORY include/
   DESTINATION include)
 install(DIRECTORY launch
   DESTINATION share/${PROJECT_NAME})
-install(DIRECTORY param
-  DESTINATION share/${PROJECT_NAME})
+# install(DIRECTORY param
+#   DESTINATION share/${PROJECT_NAME})
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
