--- a/kimera_vio_ros/CMakeLists.txt
+++ b/kimera_vio_ros/CMakeLists.txt
@@ -39,6 +39,7 @@ set(dependencies
 set(library_name ${PROJECT_NAME})
 add_library(${library_name} SHARED
   src/interfaces/base_interface.cpp
+  src/interfaces/image_interface.cpp
   src/interfaces/imu_interface.cpp
   src/interfaces/stereo_interface.cpp
 )
