Use gflags but drop glog for now

--- a/kimera_vio_ros/CMakeLists.txt
+++ b/kimera_vio_ros/CMakeLists.txt
@@ -11,8 +11,7 @@ find_package(Boost REQUIRED COMPONENTS
   thread
   timer
 )
-# find_package(Gflags REQUIRED)
-# find_package(Glog REQUIRED)
+find_package(Gflags REQUIRED)
 find_package(OpenCV 3.3.1 REQUIRED)
 find_package(ament_cmake REQUIRED)
 find_package(cv_bridge REQUIRED)
