Comment out launch install for now

--- a/kimera_vio_ros/CMakeLists.txt
+++ b/kimera_vio_ros/CMakeLists.txt
@@ -70,8 +70,8 @@ install(TARGETS ${executable_name} ${library_name}
 
 install(DIRECTORY include/
   DESTINATION include)
-install(DIRECTORY launch
-  DESTINATION share/${PROJECT_NAME})
+# install(DIRECTORY launch
+#   DESTINATION share/${PROJECT_NAME})
 # install(DIRECTORY param
 #   DESTINATION share/${PROJECT_NAME})
 
