Enable glog checks

--- a/kimera_vio_ros/package.xml
+++ b/kimera_vio_ros/package.xml
@@ -18,6 +18,7 @@
   <depend>kimera_vio</depend>
   <depend>libboost-dev</depend>
   <depend>libgflags-dev</depend>
+  <depend>libgoogle-glog-dev</depend>
   <depend>libopencv-dev</depend>
   <depend>message_filters</depend>
   <depend>rclcpp</depend>
