Add publishState for odometry

--- a/kimera_vio_ros/CMakeLists.txt
+++ b/kimera_vio_ros/CMakeLists.txt
@@ -20,6 +20,7 @@ find_package(glog REQUIRED)
 find_package(kimera_common REQUIRED)
 find_package(kimera_vio REQUIRED)
 find_package(message_filters REQUIRED)
+find_package(nav_msgs REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclcpp_components REQUIRED)
 find_package(sensor_msgs REQUIRED)
@@ -36,6 +37,7 @@ set(dependencies
   geometry_msgs
   kimera_vio
   message_filters
+  nav_msgs
   rclcpp
   rclcpp_components
   sensor_msgs
