--- a/kimera_vio_ros/param/RealSense_IR/trackerParameters.yaml
+++ b/kimera_vio_ros/param/RealSense_IR/trackerParameters.yaml
@@ -5,7 +5,7 @@ klt_max_iter: 30
 klt_max_level: 4
 klt_eps: 0.1
 maxFeatureAge: 10
-maxFeaturesPerFrame: 600
+maxFeaturesPerFrame: 300
 quality_level: 0.001
 min_distance: 20
 block_size: 3
@@ -48,3 +48,7 @@ disparityThreshold: 0.5
 # visionSensorType: 1
 # minDepthFactor: 0.3
 # mapDepthFactor: 0.001 # 1/1000
+# Type of optical flow predictor to aid feature tracking:
+# 0: Static - assumes no optical flow between images (aka static camera).
+# 1: Rotational - use IMU gyro to estimate optical flow.
+optical_flow_predictor_type: 1
