--- a/kimera_vio_ros/package.xml
+++ b/kimera_vio_ros/package.xml
@@ -22,6 +22,8 @@
   <depend>libopencv-dev</depend>
   <depend>message_filters</depend>
   <depend>nav_msgs</depend>
+  <depend>pcl_conversions</depend>
+  <depend>pcl_msgs</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
   <depend>sensor_msgs</depend>
