Update realsense params

--- a/kimera_vio_ros/param/RealSense_IR/tracker/trackerParameters_rgbd.yaml
+++ b/kimera_vio_ros/param/RealSense_IR/tracker/trackerParameters_rgbd.yaml
@@ -5,7 +5,7 @@ klt_max_iter: 30
 klt_max_level: 4
 klt_eps: 0.1
 maxFeatureAge: 10
-maxFeaturesPerFrame: 300
+maxFeaturesPerFrame: 600
 quality_level: 0.001
 min_distance: 20
 block_size: 3
@@ -42,13 +42,8 @@ ransac_randomize: 0
 intra_keyframe_time: 0.2
 minNumberFeatures: 0
 useStereoTracking: 1
-display_time: 100
 disparityThreshold: 0.5
-# #RGB-D PARAMETERS
-# visionSensorType: 1
-# minDepthFactor: 0.3
-# mapDepthFactor: 0.001 # 1/1000
-# Type of optical flow predictor to aid feature tracking:
-# 0: Static - assumes no optical flow between images (aka static camera).
-# 1: Rotational - use IMU gyro to estimate optical flow.
-optical_flow_predictor_type: 1
+#RGB-D PARAMETERS
+visionSensorType: 1
+minDepthFactor: 0.3
+mapDepthFactor: 0.001 # 1/1000
