--- a/kimera_vio_ros/params/RealSenseIR/ImuParams.yaml
+++ b/kimera_vio_ros/params/RealSenseIR/ImuParams.yaml
@@ -16,10 +16,10 @@ T_BS:
 rate_hz: 200
 
 # inertial sensor noise model parameters (static)
-gyroscope_noise_density: 0.00011833115133     # [ rad / s / sqrt(Hz) ]   ( gyro "white noise" )
-gyroscope_random_walk: 0.00011833115133       # [ rad / s^2 / sqrt(Hz) ] ( gyro bias diffusion )
-accelerometer_noise_density: 0.015254156844262  # [ m / s^2 / sqrt(Hz) ]   ( accel "white noise" )
-accelerometer_random_walk: 0.015254156844262    # [ m / s^3 / sqrt(Hz) ].  ( accel bias diffusion )
+gyroscope_noise_density: 0.000488     # [ rad / s / sqrt(Hz) ]   ( gyro "white noise" )
+gyroscope_random_walk: 4.88e-05       # [ rad / s^2 / sqrt(Hz) ] ( gyro bias diffusion )
+accelerometer_noise_density: 0.00147  # [ m / s^2 / sqrt(Hz) ]   ( accel "white noise" )
+accelerometer_random_walk: 0.00147    # [ m / s^3 / sqrt(Hz) ].  ( accel bias diffusion )
 
 # Extra parameters
 imu_integration_sigma: 1.0e-8
