--- a/kimera_vio_ros/params/RealSenseIR/LcdParams.yaml
+++ b/kimera_vio_ros/params/RealSenseIR/LcdParams.yaml
@@ -1,11 +1,11 @@
 %YAML:1.0
 # LoopClosureDetector parameters:
 use_nss: 1
-alpha: 0.5
-min_temporal_matches: 3
-dist_local: 20
+alpha: 0.001
+min_temporal_matches: 1
+dist_local: 1
 max_db_results: 50
-min_nss_factor: 0.005
+min_nss_factor: 0.05
 min_matches_per_group: 1
 max_intragroup_gap: 3
 max_distance_between_groups: 3
@@ -14,23 +14,23 @@ max_distance_between_queries: 2
 geom_check_id: 0
 min_correspondences: 12
 max_ransac_iterations_mono: 500
-ransac_probability_mono: 0.99
-ransac_threshold_mono: 1e-6
-ransac_randomize_mono: 0
-ransac_inlier_threshold_mono: 0.5
+ransac_probability_mono: 0.995
+ransac_threshold_mono: 1e-5
+ransac_randomize_mono: 1
+ransac_inlier_threshold_mono: 0.01
 
 pose_recovery_option_id: 0
 max_ransac_iterations_stereo: 500
 ransac_probability_stereo: 0.995
-ransac_threshold_stereo: 0.15
-ransac_randomize_stereo: 0
-ransac_inlier_threshold_stereo: 0.5
-use_mono_rot: 1
+ransac_threshold_stereo: 0.3
+ransac_randomize_stereo: 1
+ransac_inlier_threshold_stereo: 0.3
+use_mono_rot: 0
 
-lowe_ratio: 0.7
+lowe_ratio: 0.2  # TODO(marcus): get rid, not used
 matcher_type: 3
 
-nfeatures: 500
+nfeatures: 1000
 scale_factor: 1.2
 nlevels: 8
 edge_threshold: 31
@@ -40,8 +40,8 @@ score_type_id: 0
 patch_sze: 31
 fast_threshold: 20
 
-pgo_rot_threshold: 0.01
-pgo_trans_threshold: 0.1
+pgo_rot_threshold: 0.005
+pgo_trans_threshold: 0.05
 
 # geom_check_id options:
 #   0: NISTER
